Fix a trivial FIXME https://bugs.webkit.org/show_bug.cgi?id=130432

Reviewed by Tim Horton.

* history/HistoryItem.cpp:
(WebCore::HistoryItem::encodeBackForwardTreeNode):

Canonical link: https://commits.webkit.org/148419@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165854 268f45cc-cd09-0410-ab3c-d52691b4dbfc